Iteration 2: created Hummus recipe page and added link from index

--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Teta's Hummus</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <p><a href="./recipes/hummus.html">Teta's Hummus</a></p>
+    <h1>Teta's Hummus</h1>
 </body>
 </html>
