Iteration 3: populated hummus recipe and created images dir

--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -8,5 +8,27 @@
 </head>
 <body>
     <h1>Teta's Hummus</h1>
+    <p><img src="../img/hummus.jpg"></p>
+    <h3>Description</h3>
+    <p>Hummus is a creamy middle eastern chickpea based dip. It is a vegan dip packed with protein from the chickpeas and healthy omega fatty acids from the olive oil.</p>
+    <p>The health benefits are many, and it's also a snap to make. I think Teta's way tastes better, hand-mashed with a fork and a shallow bowl, but it's super easy to whip up in a blender or a food pro.</p>
+    <h3>Ingredients</h3>
+    <p><ul>
+        <li>Chickpeas, cooked</li>
+        <li>Tahini</li>
+        <li>High quality extra virgin olive oil</li>
+        <li>Lemon juice</li>
+        <li>Garlic, peeled and mashed</li>
+        <li>Sea salt, fine</li>
+        <li>Cumin, ground</li>
+        <li>Water</li>
+    </ul></p>
+    <h3>Steps</h3>
+    <p><ol>
+        <li>Add chickpeas, tahini, lemon juice, garlic, salt, and half of the olive oil into a shallow bowl and mash together with a fork.</li>
+        </li>As a dry paste begins to form, add the rest of the olive oil.</li>
+        <li>Continue mashing and slowly adding water to achieve a smooth and creamy consistency.</li>
+        <li>Finish by adding cumin and salt to taste.</li>
+    </ol></p>
 </body>
 </html>
