updated hummus recipe

--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -29,6 +29,7 @@
         </li>As a dry paste begins to form, add the rest of the olive oil.</li>
         <li>Continue mashing and slowly adding water to achieve a smooth and creamy consistency.</li>
         <li>Finish by adding cumin and salt to taste.</li>
+        <li>Serve with olive oil drizzled on top, kalamata or sun-dried olives, and warm pita bread. For a healthier alternative, substitute pita bread with raw veggies.</li>
     </ol></p>
 </body>
 </html>
